Overflow Fix

--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -1,7 +1,3 @@
-.completeContainer, body {
-    overflow-y: hidden;
-}
-
 .allContent {
     width: 100vw;
     height: 100vh;
